# dbterd-vscode

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml
.claude/: design_patterns.md  settings.json
docs/: demo.md
extension/: .vscodeignore  esbuild.js  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/: pyproject.toml
server/src/dbterd_server/: __init__.py  __main__.py  codegen.py  erd.py  json_target.py  logging_setup.py  main.py  schemas.py
server/src/dbterd_server/api/: __init__.py  app.py  dependencies.py  errors.py  lifespan.py  middleware.py  service.py
server/src/dbterd_server/api/routes/: __init__.py  erd.py  health.py
server/src/dbterd_server/erd/: __init__.py  builder.py  cache.py  cardinality.py  config.py  dbterd_client.py  errors.py  mapping.py  postprocess.py  timestamps.py
server/src/dbterd_server/plugins/json_target/: __init__.py  adapter.py  manifest.py  serializers.py
server/src/dbterd_server/schemas/: __init__.py  erd.py  errors.py  health.py
server/tests/: conftest.py  test_erd.py  test_health.py  test_json_target.py  test_main_entrypoint.py
server/tests/api/: test_erd_endpoint.py  test_health.py  test_lifespan.py  test_main_entrypoint.py  test_main_module.py
server/tests/integration/: test_build_erd.py  test_config.py
server/tests/unit/: test_cache.py  test_cardinality.py  test_json_target.py  test_logging_setup.py  test_mapping.py  test_postprocess.py  test_service.py  test_timestamps.py
webview/: eslint.config.js  index.html  package-lock.json  package.json  (+2 more)
(+94 files in other folders)
