[project]
name = "dbterd-server"
version = "0.0.1"
description = "FastAPI shim around the dbterd Python API for the dbterd VS Code extension."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "dbterd>=1.9.0",
  "pyyaml>=6.0",
]

[project.scripts]
dbterd-server = "dbterd_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbterd_server"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["dbterd_server"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
  "pragma: no cover",
]
